style.css
@import url(https://fonts.googleapis.com/css?family=Mr+Dafoe);
@import url(https://fonts.googleapis.com/css?family=Monoton);


* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

body {
    font-size: 10px;
  background: -webkit-linear-gradient(to top, #1a284f 0%, #2b1b37 100%);
  background: -moz-gradient(to top, #1a284f 0%, #2b1b37 100%);
  background: linear-gradient(to top, #1a284f 0%, #2b1b37 100%);
  background-repeat: no-repeat;
  background-size: cover;
}

.wrapper {
    width: 500px;
    margin: 0 auto;
    position: relative;
}

/* Keyboard styles */

.keyboard {
    color: white;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-row-gap: 40px;
    justify-items: center;
    margin-bottom: 100px;
}

.key {
    width: 110px;
    height: 110px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 5px solid rgb(135, 226, 238);
    border-radius: 10px;
    padding: 25px 50px;
    line-height: 0.4;
    transition: all .12s ease-in-out;
}

.key p {
    font-family: 'Monoton', cursive;
    font-size: 30px;
    margin: 0;
}

.key span {
    font-family: 'Mr Dafoe', cursive;
    font-size: 55px;
    margin: 0;
    position: relative;
    top: 20px;
    left: -5px;
    -webkit-text-fill-color: rgba(#045BAC);
    text-shadow: -2px -2px 0 #045BAC;
    -webkit-filter: drop-shadow(3px 3px 1px #441F62);
    -webkit-transform: skew(35deg,-4deg);
}


/* Modes styling */
.modes {
  position: absolute;
  display: flex;
  flex-direction: column;
  left: -100px;
}

.modes i {
  color: rgb(135, 226, 238);
  font-size: 40px;
  margin: 20px;
  cursor: pointer;
}

i.disabled {
  cursor: initial;
}


/* Heading text styles*/
.future-cop {
    position: relative;
    width: 680px;
  	margin-left: auto;
	margin-right: auto;
	margin-top: 60px;
}

.future {
  position: absolute;
  top: -150px;
  right: 0;
  font-family: 'Mr Dafoe', cursive;
  font-size: 150px;
  margin-top: 160px;
  margin-bottom: 0;
  color: white;
  -webkit-text-fill-color: rgba(#045BAC);
  text-shadow: -2px -2px 0 #045BAC;
  -webkit-filter: drop-shadow(3px 3px 1px #441F62);
  -webkit-transform: skew(-5deg,-5deg);
  font-weight: normal;
  z-index: 2;
  margin-left: 0px;
}

.cop {
  font-family: 'Monoton', cursive;
  font-size: 170px;
  line-height: 1;
  margin: 0;
  margin-bottom: 50px;
  /* font-weight: normal; */
  background-image: -webkit-linear-gradient(#022486 0%, #0AD0FD 30%, #BDFCFC 40%, #D8FFFF 44%, #00081C 44%, #00081C 50%, #074A67 52%, #1CD8FE 60%, #7FEDFE 62%, #96F5FC 70%, #0FD8FA 73%, #0BD2FD 88%, #AFFDFF 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke: 1px #fff;
}

.cop {
  font-weight: 400;
}

.cop:before {
  position: absolute;
  content: '';
  left: 51px;
  top: 74px;
  width: 80px;
  height: 3px;
  background-image: -webkit-radial-gradient(#fff 0%, transparent 85%);
  z-index: 4;
  -webkit-animation-name: cop_before_effect;
  -webkit-animation-duration: 5s;
  -webkit-animation-delay: 2s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
}

.cop:after {
  position: absolute;
  content: '';
  left: 90px;
  top: 32px;
  width: 3px;
  height: 80px;
  background-image: -webkit-radial-gradient(#fff 0%, transparent 85%);
  z-index: 4;
  -webkit-animation-name: cop_after_effect;
  -webkit-animation-duration: 5s;
  -webkit-animation-delay: 2s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
}

.playing {
  transform: scale(1.15);
  border-color: #0FD8FA;
  box-shadow: 0 0 1rem #0FD8FA;
  background-color: #1d2d5a;
}

@-webkit-keyframes cop_before_effect {
  0% {
    left: 51px;
    top: 74px;
    opacity: 0;}

  15% {
    left: 51px;
    top: 74px;
    opacity: 1;}

  30% {
    left: 51px;
    top: 74px;
    opacity: 0;}

  35% {
    left: 370px;
    top: 45px;
    opacity: 0;}

  50% {
    left: 370px;
    top: 45px;
    opacity: 1;}

  65% {
    left: 370px;
    top: 45px;
    opacity: 0;}

  70% {
    left: 564px;
    top: 74px;
    opacity: 0;}

  85% {
    left: 564px;
    top: 74px;
    opacity: 1;}

  100% {
    left: 564px;
    top: 74px;
    opacity: 0;}
}

@-webkit-keyframes cop_after_effect {
  0% {
    left: 90px;
    top: 32px;
    opacity: 0;}

  15% {
    left: 90px;
    top: 32px;
    opacity: 1;}

  30% {
    left: 90px;
    top: 32px;
    opacity: 0;}

  35% {
    left: 413px;
    top: 11px;
    opacity: 0;}

  50% {
    left: 413px;
    top: 11px;
    opacity: 1;}

  65% {
    left: 413px;
    top: 11px;
    opacity: 0;}

  70% {
    left: 603px;
    top: 32px;
    opacity: 0;}

  85% {
    left: 603px;
    top: 32px;
    opacity: 1;}

  100% {
    left: 603px;
    top: 32px;
    opacity: 0;}
}

